2009-11-23  6.5.8-0 Cristy  <quetzlzacatenango@image...>
  * Add 'dither' option to Remap().

2009-10-18  6.5.7-0 Cristy  <quetzlzacatenango@image...>
  * Interpret gravity properly for ExtentImage().
  * Support the  Modulate() method parameter, 'lightness.'

2009-10-08  6.5.6-10 <kmx@volny...>
  * Improve PerlMagick.PL to work with Strawberry Perl under Windows.

2009-08-02  6.5.4-8 Cristy  <quetzlzacatenango@image...>
  * Create a image registry to track which image objects must be cloned
    when a Perl thread is created.

2009-06-14  6.5.3-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Expand PerlMagick Composite() 'mask' merge for both compose 'displace'
    and new 'distort' mapping (absolute lookup)

2009-06-11  6.5.3-5 Anthony Thyssen <A.Thyssen@griffith...>
  * Fixed PerlMagick Composite() for correct merging of 'mask' image into
    the overlay image for Displacement Mapping Composition.

2009-06-02  6.5.3-2 Cristy  <quetzlzacatenango@image...>
  * Fix filename parameter in Read() (e.g. $image->Read(filename=>'xc:white')).  
2009-04-14  6.5.1-3 Cristy  <quetzlzacatenango@image...>
  * Support magick parameter for Read() (e.g.
    $im->Read( file => $fh, magick +> 'text:' )).

2008-11-16  6.4.4-5 Cristy  <quetzlzacatenango@image...>
  * Statistics() returns normalized values.

2008-10-16  6.4.4-9 Michael.Kroell <michael.kroell@gmail...>
  * Check if Image::Magick::constant is defined in AUTOLOAD() function.

2008-06-07  6.4.1-9 Cristy  <quetzlzacatenango@image...>
  * Permit settings of the form:
    $image->Set("quantum:polarity","min-is-white").

2008-04-07  6.4.0-5 Cristy  <quetzlzacatenango@image...>
  * X11 regression test passed if the DISPLAY variable is not defined (reference
		http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=10979).
  * Make regression test, x11/write.t, exit after 8 seconds as stated (reference
		http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=10979).
